micro-svc/chapter-files/security/weather-serviceaccount.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: weather-frontend
      containers:
      - name: frontend
        image: istioweather/frontend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: advertisement-v1
  labels:
    app: advertisement
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: advertisement
        version: v1
    spec:
      serviceAccountName: weather-advertisement
      containers:
      - name: advertisement
        image: istioweather/advertisement:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
---
